# Revenue-Leak-Detective

./: .coderabbit.yaml  .env.example  .gitignore  FEATURE_IMPLEMENTATION_CHECK_CORE_DOMAIN_MODELS.md  Makefile  Product_Idea.txt  README.md  Road_Map.txt  go.mod  response.md
.cursor/: config.json  cto.md  cto.prompt
.cursor/commands/: code_review.md  feature_implementation_check.md
.github/workflows/: go-ci.yml  python-ci.yml  release.yml
deploy/dev/: docker-compose.yml
deploy/docker/: Dockerfile.api  Dockerfile.workers
make/: api.mk  db.mk  docker.mk  release.mk  tools.mk  variables.mk  workers.mk
scripts/: get-git-info.sh
services/api/: .golangci.yml  ARCHITECTURE_EVOLUTION.md  go.mod  go.sum  sqlc.yml
services/api/cmd/: flags.go  main.go
services/api/config/: README.md  build_info.go  config.go  config_test.go  database.go  docs.go  environment.go  errors.go  http.go  loader.go  types.go  validator.go
services/api/handlers/: app.go  errors.go  health-check.go  health-check_test.go  health.go  health_test.go  live_ready.go  tenant.go  version.go  web.go
services/api/migrations/: 001_create_extentions_and_functions.down.sql  001_create_extentions_and_functions.up.sql  001_initial_schema.down.sql  001_initial_schema.up.sql  002_create_tenants_table.down.sql  002_create_tenants_table.up.sql  002_email_case_insensitive.down.sql  002_email_case_insensitive.up.sql  README.md  (+26 more)
workers/: README.md  pyproject.toml  pytest.ini  run.py  test_run.py
workers/src/agent/: __init__.py  __main__.py  run.py
workers/tests/: README.md  conftest.py  test_run.py
(+68 files in other folders)
